edits to home page

--- a/website/style/_variables.scss
+++ b/website/style/_variables.scss
@@ -1,3 +1,8 @@
+
+$regular-font: 'Nunito';
+$heading-font: 'Raleway';
+$semi-bold: 600;
+
 // ---------- FONT SIZES ---------- //
 $font-size-label: 14px;
 $font-size-input: 14px;
