--- a/website/style/custom.scss
+++ b/website/style/custom.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito|Raleway:400,600');
 @import 'variables';
 @import 'mixins';
+@import 'fonts';
 @import 'footer';
+@import 'general';
