--- a/website/style/_general.scss
+++ b/website/style/_general.scss
@@ -27,3 +27,65 @@
   line-height: 24px;
   text-transform: inherit;
 }
+
+nav.toc .toggleNav ul li a{
+  font-weight: normal;
+  font-size: 16px;
+  color: $kinto-grayscale-7;
+  letter-spacing: 0;
+  line-height: 24px;
+  margin-bottom: 0;
+  &:hover {
+    color: rgba($kinto-grayscale-7, 0.4);
+  }
+  &.navItemActive {
+    font-size: 16px;
+    color: $kinto-blue;
+    letter-spacing: 0;
+    line-height: 24px;
+  }
+}
+
+nav.toc .toggleNav .navGroup.navGroupActive {
+  background-color: $kinto-white;
+  h3 {
+    font-size: 20px;
+    color: $kinto-grayscale-8;
+    letter-spacing: 0;
+    line-height: 24px;
+    background-color: $kinto-white;
+  }
+}
+
+nav.toc .toggleNav .navGroup {
+  margin: 0;
+  padding-bottom: 24px;
+}
+
+.toc-headings {
+  li ul li a {
+    font-weight: normal;
+  }
+}
+
+blockquote ul li {
+  font-size: 16px;
+  color: #556F7D;
+  letter-spacing: 0;
+  line-height: 24px;
+}
+
+ul li {
+  font-size: 16px;
+  color: #556F7D;
+  letter-spacing: 0;
+  line-height: 24px;
+  a {
+    font-weight: normal;
+  }
+}
+
+// overriding the standard underline
+.mainContainer .wrapper a:hover, .mainContainer .wrapper a:focus, .inner .projectIntro a:hover, .inner .projectIntro a:focus {
+  text-decoration: none;
+}
