💖 feat(helpPage): Landing page styling (#5)
* edits to home page

* added some styling

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,3 +1,83 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito|Raleway:400,600");
+h1, .h1 {
+  font-size: 28px;
+  line-height: 46px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  color: #0c4b5d; }
+  @media (min-width: 768px) {
+    h1, .h1 {
+      font-size: 42px; } }
+
+h2, .h2 {
+  font-size: 24px;
+  line-height: 32px;
+  font-family: 'Raleway', sans-serif;
+  color: #083a45;
+  font-weight: 600; }
+  @media (min-width: 768px) {
+    h2, .h2 {
+      font-size: 28px; } }
+
+h3, .h3 {
+  font-size: 20px;
+  line-height: 24px;
+  color: #a2b0bd;
+  font-weight: normal; }
+
+p, h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
+  font-family: 'Nunito', sans-serif;
+  margin: 0 0 10px 0; }
+
+p, h4, .h4 {
+  font-size: 18px;
+  color: #556f7d;
+  line-height: 24px;
+  font-family: "Nunito", sans-serif; }
+  @media (min-width: 768px) {
+    p, h4, .h4 {
+      font-size: 16px; } }
+
+h5, .h5 {
+  font-size: 16px;
+  color: #556f7d;
+  line-height: 24px; }
+  @media (min-width: 768px) {
+    h5, .h5 {
+      font-size: 14px; } }
+
+h6, .h6 {
+  font-size: 14px;
+  color: #a2b0bd;
+  line-height: 24px; }
+  @media (min-width: 768px) {
+    h6, .h6 {
+      font-size: 12px; } }
+
+a {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  color: #1488a2;
+  letter-spacing: 0;
+  line-height: 24px; }
+  a:hover {
+    color: #1ec4e9;
+    text-decoration: none; }
+
+.fonts .section {
+  width: 50%;
+  display: inline-block; }
+
+.bold {
+  font-weight: 700; }
+
+.semi-bold {
+  font-weight: 600; }
+
+.center {
+  text-align: center; }
+
 .footer-background {
   background-color: #f6f8fc; }
   .footer-background .line {
@@ -21,6 +101,7 @@ h6.byline {
 
 footer {
   min-height: 140px;
+  max-height: 200px;
   width: 100%; }
   footer .left {
     text-align: center; }
@@ -114,3 +195,75 @@ footer {
       margin: 0; }
     footer .content .right .footer-logo {
       margin-left: 20px; } }
+
+.navPusher {
+  background-color: white;
+  height: auto; }
+
+.projectTitle {
+  margin-bottom: 74px; }
+
+.homeContainer {
+  height: 74vh;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.button {
+  border: 1px solid #98b4cd;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #98b4cd;
+  letter-spacing: 0;
+  text-align: center;
+  line-height: 24px;
+  text-transform: inherit; }
+
+nav.toc .toggleNav ul li a {
+  font-weight: normal;
+  font-size: 16px;
+  color: #556f7d;
+  letter-spacing: 0;
+  line-height: 24px;
+  margin-bottom: 0; }
+  nav.toc .toggleNav ul li a:hover {
+    color: rgba(85, 111, 125, 0.4); }
+  nav.toc .toggleNav ul li a.navItemActive {
+    font-size: 16px;
+    color: #1ec4e9;
+    letter-spacing: 0;
+    line-height: 24px; }
+
+nav.toc .toggleNav .navGroup.navGroupActive {
+  background-color: white; }
+  nav.toc .toggleNav .navGroup.navGroupActive h3 {
+    font-size: 20px;
+    color: #38535e;
+    letter-spacing: 0;
+    line-height: 24px;
+    background-color: white; }
+
+nav.toc .toggleNav .navGroup {
+  margin: 0;
+  padding-bottom: 24px; }
+
+.toc-headings li ul li a {
+  font-weight: normal; }
+
+blockquote ul li {
+  font-size: 16px;
+  color: #556F7D;
+  letter-spacing: 0;
+  line-height: 24px; }
+
+ul li {
+  font-size: 16px;
+  color: #556F7D;
+  letter-spacing: 0;
+  line-height: 24px; }
+  ul li a {
+    font-weight: normal; }
+
+.mainContainer .wrapper a:hover, .mainContainer .wrapper a:focus, .inner .projectIntro a:hover, .inner .projectIntro a:focus {
+  text-decoration: none; }
