--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -319,9 +319,9 @@ nav.toc .toggleNav .navGroup {
   font-weight: normal; }
 
 blockquote {
-  background-color: rgba(244, 100, 100, 0.1);
+  background-color: rgba(255, 217, 120, 0.2);
   border-left: none;
-  box-shadow: inset 4px 0 0 0 #F46464;
+  box-shadow: inset 4px 0 0 0 #FFDB18;
   border-radius: 4px;
   padding-left: 30px; }
   blockquote ul li {
@@ -344,7 +344,7 @@ ul li {
 
 pre code, pre code.hljs {
   background: #f6f8fc;
-  box-shadow: inset 4px 0 0 0 #1488A2;
+  box-shadow: inset 4px 0 0 0 #A2B0BD;
   border-radius: 4px;
   border: none;
   padding: 0.5em 0.5em 0.5em 30px;
