--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -86,7 +86,7 @@ h3, .h3 {
   margin-top: 30px;
   font-weight: normal; }
 
-p, h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
+p, h3, h4, h5, h6, .h3, .h4, .h5, .h6, ul, ol {
   font-family: 'Nunito', sans-serif;
   margin: 0 0 10px 0; }
 
