--- a/website/style/_fonts.scss
+++ b/website/style/_fonts.scss
@@ -42,7 +42,7 @@ h3, .h3 {
   font-weight: normal;
 }
 
-p, h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
+p, h3, h4, h5, h6, .h3, .h4, .h5, .h6, ul, ol {
   font-family: 'Nunito', sans-serif;
   margin: 0 0 $margin-base 0;
 }
