🐛 fix(search): search has incorrect height after new version of docusauruce

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -367,7 +367,8 @@ code {
 input#search_input_react {
   border-radius: 4px;
   padding: 16px 16px 16px 35px;
-  height: 40px; }
+  height: 40px;
+  box-sizing: border-box; }
 
 .navigationWrapper {
   margin-top: 10px; }
