--- a/website/style/_general.scss
+++ b/website/style/_general.scss
@@ -135,6 +135,7 @@ input#search_input_react {
   border-radius: 4px;
   padding: 16px 16px 16px 35px;
   height: 40px;
+  box-sizing: border-box;
 }
 
 .navigationWrapper {
