--- a/website/style/_fonts.scss
+++ b/website/style/_fonts.scss
@@ -86,6 +86,9 @@ a {
     color: $text-link-focus;
     text-decoration: none;
   }
+  code {
+    font-weight: normal;
+  }
 }
 
 .fonts {
@@ -98,8 +101,21 @@ a {
 .bold {
   font-weight: 700;
 }
+strong {
+  color: $text-highlight;
+  em, em & {
+    color: $text-emphasize;
+  }
+}
 .semi-bold {
   font-weight: 600;
+}
+em {
+  color: $kinto-dark;
+  padding-right: .25em;
+  a & {
+    color: $kinto-purple;
+  }
 }
 
 .center {
