🔬wip(docs): tweaking em spacing

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -145,7 +145,7 @@ strong {
 
 em {
   color: #393939;
-  padding-right: .25em; }
+  padding-right: .15em; }
   a em {
     color: #7a68e8; }
 
@@ -413,3 +413,8 @@ input#search_input_react {
 
 .mainContainer .wrapper a:hover, .mainContainer .wrapper a:focus, .inner .projectIntro a:hover, .inner .projectIntro a:focus {
   text-decoration: none; }
+
+.float-left-padding {
+  float: left;
+  padding-right: 1em;
+  padding-top: 1em; }
