--- a/website/style/_general.scss
+++ b/website/style/_general.scss
@@ -187,3 +187,17 @@ input#search_input_react {
   padding-right: 1em;
   padding-top: 1em;
 }
+
+// css magic for responsive iframe video 
+.iframe-container {
+  position:relative;
+  padding-top:56.25%;
+
+  iframe {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+  }
+}
