🚀feat: UI amendments

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -422,7 +422,8 @@ input#search_input_react {
 
 .iframe-container {
   position: relative;
-  padding-top: 56.25%; }
+  padding-top: 56.25%;
+  margin-bottom: 1em; }
   .iframe-container iframe {
     position: absolute;
     top: 0;
