--- a/website/style/_general.scss
+++ b/website/style/_general.scss
@@ -192,7 +192,7 @@ input#search_input_react {
 .iframe-container {
   position:relative;
   padding-top:56.25%;
-
+  margin-bottom: 1em;
   iframe {
     position:absolute;
     top:0;
